--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6">
         <dl>
-            <dt>Domaine</dt>
+            <dt>{{ 'app.presentation.view.general.domain' | trans }}</dt>
             <dd class="mandatory-data">
                 {% set domains = "" %}
                 {% for domain in courseInfo.domains %}
@@ -15,7 +15,7 @@
             <dd class="mandatory-data">{{ courseInfo.level|humanizeEmptyData(null, 'app.const.level.')}}</dd>
         </dl>
         <dl>
-            <dt>Campus</dt>
+            <dt>{{ 'app.presentation.view.general.campus' | trans }}</dt>
             <dd>
                 {% set campuses = "" %}
                 {% for campus in courseInfo.campuses %}
@@ -27,7 +27,7 @@
     </div>
     <div class="col-md-6">
         <dl>
-            <dt>Période</dt>
+            <dt>{{ 'app.presentation.view.general.period' | trans }}</dt>
             <dd>
                 {% set periods = "" %}
                 {% for period in courseInfo.periods %}
@@ -37,7 +37,7 @@
             </dd>
         </dl>
         <dl>
-            <dt>Langues</dt>
+            <dt>{{ 'app.presentation.view.general.languages' | trans }}</dt>
             <dd>
                 {% set languages = "" %}
                 {% for language in courseInfo.languages %}
@@ -68,12 +68,3 @@
         {{ courseInfo.summary|humanizeEmptyData()|purify }}
     </div>
 </div>
-
-<script>
-    /**
-     * Change the media type value when clicking on media tab
-     */
-    $(document).on('click', '#media_type > li > a', function () {
-        $("#general_mediaType").val($(this).data('media-type'));
-    });
-</script>
