Rename Cron in Job

--- a/app/Resources/views/job/report.html.twig
+++ b/app/Resources/views/job/report.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Rapport du cron ' ~ cron.label %}
+{% set h1 = 'Rapport du job ' ~ job.label %}
 
 {% block subContent %}
     {% if report %}
