--- a/app/Resources/views/job/edit.html.twig
+++ b/app/Resources/views/job/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Ajouter un cron' %}
+{% set h1 = 'Modifier un job' %}
 {% block subContent %}
 
     <div class="card card-primary">
 
         <div class="card-body">
-            {{ include('cron/_form.html.twig') }}
+            {{ include('job/_form.html.twig', {'button_label' : 'Modifier'}) }}
         </div>
 
     </div>
