--- a/app/Resources/views/job/index.html.twig
+++ b/app/Resources/views/job/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = 'Liste des crons' %}
+{% set h1 = 'Liste des tâches planifiées' %}
 
 {% block modals %}
     {{ parent() }}
@@ -17,11 +17,11 @@
                     {{ form_row(form.label) }}
                 </div>
                 <div class="col-md-2 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app.admin.cron.index')  }}">Réinitialiser les filtres</a>
+                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app.admin.job.index')  }}">Réinitialiser les filtres</a>
                 </div>
                 <input type="submit" style="position: absolute; left: -9999px"/>
                 <div class="col-md-8 col-sm-8">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{ path('app.admin.cron.new') }}">Ajouter un cron</a>
+                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{ path('app.admin.job.new') }}">Ajouter une tâche</a>
                 </div>
             </div>
             {{ form_end(form) }}
@@ -37,41 +37,41 @@
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Statut', 'c.lastStatus') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Date d\'excecution', 'c.lastUseStart') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Fin d\'excecution', 'c.lastUseEnd') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'Fréquence', 'c.frequencyCronFormat') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'Fréquence', 'c.frequencyJobFormat') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Immédiat', 'c.immediately') }}</th>
                         <th >Actions</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for cron in pagination %}
-                        <tr class="{{ cron.obsolete ? 'bg-warning' }}">
-                            <td><a href="{{ path('app.admin.cron.edit', { 'id' : cron.id }) }}">{{ cron.label }}</a></td>
-                            <td>{{ cron.command }} {{ cron.obsolete ? '(Cette commande n\'existe plus)' }}</td>
-                            <td>{{ ('app.const.cron.status.'~cron.lastStatus)|trans }}</td>
+                    {% for job in pagination %}
+                        <tr class="{{ job.obsolete ? 'bg-warning' }}">
+                            <td><a href="{{ path('app.admin.job.edit', { 'id' : job.id }) }}">{{ job.label }}</a></td>
+                            <td>{{ job.command }} {{ job.obsolete ? '(Cette commande n\'existe plus)' }}</td>
+                            <td>{{ ('app.const.job.status.'~ job.lastStatus)|trans }}</td>
                             <td>
-                                {%  if cron.lastUseStart %}
-                                    le {{ cron.lastUseStart|date('d-m-Y à h-i-s') }}
+                                {%  if job.lastUseStart %}
+                                    le {{ job.lastUseStart|date('d-m-Y à h-i-s') }}
                                 {% endif %}
                             </td>
                             <td>
-                                {%  if cron.lastUseEnd %}
-                                    le {{  cron.lastUseEnd|date('d-m-Y à h-i-s') }}
+                                {%  if job.lastUseEnd %}
+                                    le {{  job.lastUseEnd|date('d-m-Y à h-i-s') }}
                                 {% endif %}
                             </td>
-                            <td>{{ cron.frequencyCronFormat }}</td>
-                            <td>{{ cron.immediately|humanizeBoolean }}</td>
+                            <td>{{ job.frequencyJobFormat }}</td>
+                            <td>{{ job.immediately|humanizeBoolean }}</td>
                             <td>
-                                {% if cron.lastStatus == constant('AppBundle\\Constant\\Cron::STATUS_IN_PROGRESS') %}
+                                {% if job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS') %}
                                     <button class="btn btn-primary disabled">Rapport</button>
                                     <button class="btn btn-primary disabled">Executer</button>
                                     <button class="btn btn-danger disabled"><i class="fas fa-trash"></i></button>
                                 {% else %}
-                                    <a href="{{ path('app.admin.cron.report', {'id': cron.id}) }}" class="btn btn-primary">Rapport</a>
-                                    <form method="POST" action="{{ path('app.admin.cron.run_command', {'id' :cron.id}) }}" class="d-inline">
-                                        <button href="{{ path('app.admin.cron.run_command', {'id': cron.id}) }}" class="btn btn-primary">Executer</button>
-                                        <input type="hidden" name="_token" value="{{ csrf_token('cron' ~ cron.id) }}">
+                                    <a href="{{ path('app.admin.job.report', {'id': job.id}) }}" class="btn btn-primary">Rapport</a>
+                                    <form method="POST" action="{{ path('app.admin.job.run_command', {'id' : job.id}) }}" class="d-inline">
+                                        <button href="{{ path('app.admin.job.run_command', {'id': job.id}) }}" class="btn btn-primary">Executer</button>
+                                        <input type="hidden" name="_token" value="{{ csrf_token('job' ~ job.id) }}">
                                     </form>
-                                    {% set deleteFormView = deleteFormsView[cron.id] %}
+                                    {% set deleteFormView = deleteFormsView[job.id] %}
                                     {{ form_start(deleteFormView, {'attr' : {'class' : 'd-inline'}}) }}
                                     <button type="button" class="btn btn-danger warning-delete" data-toggle="modal" data-target="#warningDeleteModal">
                                         <i class="fas fa-trash"></i>
@@ -84,7 +84,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucun cron n'a été enregistré</div>
+                <div class="alert alert-info">Aucun job n'a été enregistré</div>
             {% endif %}
         </div>
         <!-- /.card-body -->
