scroll spy need "if" in <body>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
     {% endblock %}
 </head>
 
-<body class="sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open">
+<body class="sidebar-mini layout-navbar-fixed layout-fixed control-sidebar-slide-open" data-spy="scroll" data-target="#student-sidebar" data-offset="60">
 
 {% block modals %}{% endblock %}
 
