--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -6,42 +6,51 @@
         </li>
     </ul>
 {% endblock %}
+
+{% block sidebar %}
+    {% include 'course_info/view/student_sidebar.html.twig' %}
+{% endblock %}
+
 {% block content %}
-
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">{{ courseInfo.title }}</h1>
-                </div><!-- /.col -->
-
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-
-    <section id="content-{{ contentName|default('default') }}" class="content">
-        <div class="container-fluid">
-            {% block subContent %}
-
-                <!-- presentation du cours -->
+        <section id="presentation-section" class="content">
+            <div class="container-fluid">
                 <div class="card my-2 shadow">
                     <div class="card-header">
                         <div class="d-flex justify-content-between">
-                            <h3 style="font-weight: 500;text-shadow: 1px 1px 1px #bbb;">{{ 'app.view.student.tabs.presentation' | trans }}</h3>
+                            <h3  class="text-shadow" style="font-weight: 500;">{{ 'app.view.student.tabs.presentation' | trans }}</h3>
                         </div>
                     </div>
                     <div class="card-body">
                         {% include 'course_info/view/student_presentation.html.twig' %}
                     </div>
                 </div>
+            </div>
+        </section>
 
-
-            {% endblock %}
-        </div>
-    </section>
+        <section id="objectives-section" class="content">
+            <div class="container-fluid">
+                <div class="card my-2 shadow">
+                    <div class="card-header">
+                        <div class="d-flex justify-content-between">
+                            <h3  class="text-shadow" style="font-weight: 500;">{{ 'app.view.student.tabs.objectives' | trans }}</h3>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        {% include 'course_info/view/student_objectives.html.twig' %}
+                    </div>
+                </div>
+            </div>
+        </section>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     {{ encore_entry_script_tags('course_info_layout') }}
+    <script>
+        $(document).ready(function() {
+            $('[data-spy="scroll"]').on('activate.bs.scrollspy', function () {
+                console.log(1);
+            });
+        });
+    </script>
 {% endblock %}
