--- a/app/Resources/views/job/index.html.twig
+++ b/app/Resources/views/job/index.html.twig
@@ -10,24 +10,30 @@
 {% block subContent %}
 
     <div class="card">
-        <div class="card-header">
-            {{ form_start(form) }}
-            <div class="row ui-front">
-                <div class="col-md-2">
-                    {{ form_row(form.label) }}
-                </div>
-                <div class="col-md-2 col-sm-6">
-                    <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app.admin.job.index')  }}">Réinitialiser les filtres</a>
-                </div>
-                <input type="submit" style="position: absolute; left: -9999px"/>
-                <div class="col-md-8 col-sm-8">
-                    <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{ path('app.admin.job.new') }}">Ajouter une tâche</a>
-                </div>
-            </div>
-            {{ form_end(form) }}
-        </div>
-        <!-- /.card-header -->
+
         <div class="card-body">
+
+            <div class="d-flex justify-content-end pb-3">
+                {% include 'action/_job_create.html.twig' %}
+            </div>
+
+            <div class="border p-3 mb-3">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        {{ form_row(form.label) }}
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Filtrer</button>
+                            <a class="btn btn-danger" href="{{  path('app.admin.job.index')  }}">Réinitialiser les filtres</a>
+                        </div>
+                    </div>
+                </div>
+
+                {{ form_end(form) }}
+            </div>
+
             {% if pagination.totalItemCount > 0 %}
                 <table class="table table-bordered table-responsive-sm">
                     <thead>
@@ -45,7 +51,13 @@
                     <tbody>
                     {% for job in pagination %}
                         <tr class="{{ job.obsolete ? 'bg-warning' }}">
-                            <td><a href="{{ path('app.admin.job.edit', { 'id' : job.id }) }}">{{ job.label }}</a></td>
+                            <td>
+                                {% if is_granted('ROLE_ADMIN_JOB_UPDATE') %}
+                                    <a href="{{ path('app.admin.job.edit', { 'id' : job.id }) }}">{{ job.label }}</a>
+                                {% else %}
+                                    {{ job.label }}
+                                {% endif %}
+                            </td>
                             <td>{{ job.command }} {{ job.obsolete ? '(Cette commande n\'existe plus)' }}</td>
                             <td>{{ ('app.const.job.status.'~ job.lastStatus)|trans }}</td>
                             <td>
@@ -61,22 +73,41 @@
                             <td>{{ job.frequencyJobFormat }}</td>
                             <td>{{ job.immediately|humanizeBoolean }}</td>
                             <td>
-                                {% if job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS') %}
-                                    <button class="btn btn-primary disabled">Rapport</button>
-                                    <button class="btn btn-primary disabled">Executer</button>
-                                    <button class="btn btn-danger disabled"><i class="fas fa-trash"></i></button>
-                                {% else %}
-                                    <a href="{{ path('app.admin.job.report', {'id': job.id}) }}" class="btn btn-primary">Rapport</a>
-                                    <form method="POST" action="{{ path('app.admin.job.run_command', {'id' : job.id}) }}" class="d-inline">
-                                        <button href="{{ path('app.admin.job.run_command', {'id': job.id}) }}" class="btn btn-primary">Executer</button>
-                                        <input type="hidden" name="_token" value="{{ csrf_token('job' ~ job.id) }}">
-                                    </form>
-                                    {% set deleteFormView = deleteFormsView[job.id] %}
-                                    {{ form_start(deleteFormView, {'attr' : {'class' : 'd-inline'}}) }}
-                                    <button type="button" class="btn btn-danger warning-delete" data-toggle="modal" data-target="#warningDeleteModal">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
-                                    {{ form_end(deleteFormView) }}
+                                {% if is_granted('ROLE_ADMIN_JOB_REPORT') %}
+                                    {% if(job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS')) %}
+                                        <a class="btn btn-primary disabled">Rapport</a>
+                                    {% else %}
+                                        <a href="{{ path('app.admin.job.report', {'id': job.id}) }}" class="btn btn-primary">
+                                            Rapport
+                                        </a>
+                                    {% endif %}
+                                {% endif %}
+
+                                {% if is_granted('ROLE_ADMIN_JOB_EXECUTE') %}
+                                    {% if(job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS')) %}
+                                        <a class="btn btn-primary disabled">Exécuter</a>
+                                    {% else %}
+                                        <form method="POST" action="{{ path('app.admin.job.run_command', {'id' : job.id}) }}" class="d-inline">
+                                            <button href="{{ path('app.admin.job.run_command', {'id': job.id}) }}" class="btn btn-primary">
+                                                Exécuter
+                                            </button>
+                                            <input type="hidden" name="_token" value="{{ csrf_token('job' ~ job.id) }}">
+                                        </form>
+                                    {% endif %}
+
+                                {% endif %}
+
+                                {% if is_granted('ROLE_ADMIN_JOB_DELETE') %}
+                                    {% if(job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS')) %}
+                                        <a class="btn btn-primary disabled"><i class="fas fa-trash"></i></a>
+                                    {% else %}
+                                        {% set deleteFormView = deleteFormsView[job.id] %}
+                                        {{ form_start(deleteFormView, {'attr' : {'class' : 'd-inline'}}) }}
+                                        <button type="button" class="btn btn-danger warning-delete" data-toggle="modal" data-target="#warningDeleteModal">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                        {{ form_end(deleteFormView) }}
+                                    {% endif %}
                                 {% endif %}
                             </td>
                         </tr>
@@ -84,7 +115,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucun job n'a été enregistré</div>
+                <div class="alert alert-info">Aucune tâche plani n'a été enregistré</div>
             {% endif %}
         </div>
         <!-- /.card-body -->
