--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -260,15 +260,18 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app.admin.job.index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.job.']) }}">
-                        <i class="nav-icon fas fa-clock"></i>
-                        <p>
-                            Tâches planifiées
-                        </p>
-                    </a>
-                </li>
+
+                {% if is_granted('ROLE_ADMIN_JOB') %}
+                    <li class="nav-item pl-2">
+                        <a href="{{ path('app.admin.job.index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.job.']) }}">
+                            <i class="nav-icon fas fa-clock"></i>
+                            <p>
+                                Tâches planifiées
+                            </p>
+                        </a>
+                    </li>
+                {% endif %}
 
                 {% if is_granted('ROLE_ADMIN_USER') %}
                     <li class="nav-item pl-2">
