--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -285,15 +285,17 @@
                     </li>
                 {% endif %}
 
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app.admin.notification.index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.notification.']) }}">
-                        <i class="nav-icon fas fa-bell"></i>
-                        <p>
-                            Notifications
-                        </p>
-                    </a>
-                </li>
+                {% if is_granted('ROLE_ADMIN_NOTIFICATION') %}
+                    <li class="nav-item pl-2">
+                        <a href="{{ path('app.admin.notification.index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.notification.']) }}">
+                            <i class="nav-icon fas fa-bell"></i>
+                            <p>
+                                Notifications
+                            </p>
+                        </a>
+                    </li>
+                {% endif %}
             </ul>
         </li>
         <li class="nav-item">
