--- a/app/Resources/views/course_info/view/student_sidebar.html.twig
+++ b/app/Resources/views/course_info/view/student_sidebar.html.twig
@@ -4,13 +4,19 @@
             <li class="nav-item has-treeview">
                 <a class="nav-link menu-tab" href="#presentation-section">
                     <i class="fas fa-star"></i>
-                    <p>Présentation Générale</p>
+                    <p>{{ 'app.view.student.tabs.presentation' | trans }}</p>
                 </a>
             </li>
             <li class="nav-item has-treeview">
                 <a class="nav-link menu-tab" href="#objectives-section">
                     <i class="fas fa-list-alt"></i>
-                    <p>Contenu et activités</p>
+                    <p>{{ 'app.view.student.tabs.objectives' | trans }}</p>
+                </a>
+            </li>
+            <li class="nav-item has-treeview">
+                <a class="nav-link menu-tab" href="#activities-section">
+                    <i class="fas fa-list-alt"></i>
+                    <p>{{ 'app.view.student.tabs.activities' | trans }}</p>
                 </a>
             </li>
         </ul>
