Generic helper messages with bootbox

--- a/app/Resources/assets/scss/sil_toolkit.scss
+++ b/app/Resources/assets/scss/sil_toolkit.scss
@@ -35,3 +35,11 @@
     z-index: $zindex-fixed;
 }
 
+.help > .help-button{
+    cursor: pointer;
+}
+
+.help > .help-message {
+    display: none;
+}
+
