--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -2,52 +2,54 @@
 
 {% block subContent %}
 
-    <div class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id }) }}"
-         data-form-url="{{ path('app.course_info.presentation.general.edit', {'id': courseInfo.id }) }}"
-    >
-        <div class="card-header">
-            <div class="d-flex justify-content-between">
-                <h3>{{ 'app.presentation.view.general.label' | trans }}</h3>
-                <button type="button" class="edit-button btn btn-primary rounded">
-                    {{ 'app.general.button.edit' | trans }}
-                </button>
+    <div class="pt-3">
+        <div class="card my-2 shadow card-syllabus"
+             data-view-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id }) }}"
+             data-form-url="{{ path('app.course_info.presentation.general.edit', {'id': courseInfo.id }) }}"
+        >
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>{{ 'app.presentation.view.general.label' | trans }}</h3>
+                    <button type="button" class="edit-button btn btn-primary rounded">
+                        {{ 'app.general.button.edit' | trans }}
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
             </div>
         </div>
-        <div class="card-body">
-        </div>
-    </div>
 
-    <div id="card-teacher" class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('app.course_info.presentation.teachers', {'id': courseInfo.id }) }}"
-    >
-        <div class="card-header">
-            <div class="d-flex justify-content-between">
-                <h3>{{ 'app.presentation.view.teachers.label' | trans }}</h3>
-                <button type="button" class="btn btn-primary modal-action rounded"
-                        data-action-title="{{ 'app.presentation.view.teachers.add_teacher' | trans }}"
-                        data-action-url="{{ path('app.course_info.presentation.teachers.add', {'id': courseInfo.id }) }}">
-                    {{ 'app.presentation.view.teachers.add_teacher' | trans }}
-                </button>
+        <div id="card-teacher" class="card my-2 shadow card-syllabus"
+             data-view-url="{{ path('app.course_info.presentation.teachers', {'id': courseInfo.id }) }}"
+        >
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>{{ 'app.presentation.view.teachers.label' | trans }}</h3>
+                    <button type="button" class="btn btn-primary modal-action rounded"
+                            data-action-title="{{ 'app.presentation.view.teachers.add_teacher' | trans }}"
+                            data-action-url="{{ path('app.course_info.presentation.teachers.add', {'id': courseInfo.id }) }}">
+                        {{ 'app.presentation.view.teachers.add_teacher' | trans }}
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
             </div>
         </div>
-        <div class="card-body">
-        </div>
-    </div>
 
-    <div class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id }) }}"
-         data-form-url="{{ path('app.course_info.presentation.teaching_mode.edit', {'id': courseInfo.id }) }}"
-    >
-        <div class="card-header">
-            <div class="d-flex justify-content-between">
-                <h3>{{ 'app.presentation.view.teaching_mode.label' | trans }}</h3>
-                <button type="button" class="edit-button btn btn-primary rounded">
-                    {{ 'app.general.button.edit' | trans }}
-                </button>
+        <div class="card my-2 shadow card-syllabus"
+             data-view-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id }) }}"
+             data-form-url="{{ path('app.course_info.presentation.teaching_mode.edit', {'id': courseInfo.id }) }}"
+        >
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <h3>{{ 'app.presentation.view.teaching_mode.label' | trans }}</h3>
+                    <button type="button" class="edit-button btn btn-primary rounded">
+                        {{ 'app.general.button.edit' | trans }}
+                    </button>
+                </div>
             </div>
-        </div>
-        <div class="card-body">
+            <div class="card-body">
+            </div>
         </div>
     </div>
 
