--- a/app/Resources/views/course_info/presentation/form/_teaching_mode_hybrid.html.twig
+++ b/app/Resources/views/course_info/presentation/form/_teaching_mode_hybrid.html.twig
@@ -1,14 +1,6 @@
-<div class="teaching-mode teaching-mode-hybrid d-none">
-    <div class="row mb-2">
-        <div class="col">
+<div class="teaching-mode teaching-mode-hybrid d-none row">
+        <div class="col-lg-6 col-md-12">
             <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.class' | trans }}</h4>
-        </div>
-        <div class="col">
-            <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.distant' | trans }}</h4>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
             <label>{{ 'app.presentation.form.teaching_mode.standard' | trans }}</label>
             <div class="row mb-3">
                 <div class="col-sm" style="max-width: 170px;">
@@ -54,7 +46,9 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+
+        <div class="col-lg-6 col-md-12">
+            <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.distant' | trans }}</h4>
             <label>{{ 'app.presentation.form.teaching_mode.standard' | trans }}</label>
             <div class="row mb-3">
                 <div class="col-sm" style="max-width: 170px;">
@@ -90,5 +84,4 @@
                 </div>
             </div>
         </div>
-    </div>
 </div>
