--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,34 +1,37 @@
 
-<label class="font-weight-bold">{{ 'app.presentation.form.teaching_mode.volumes' | trans }}</label>
-<div class="row mb-3">
-    {% if courseInfo.teachingCmClass is not null %}
-        <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmClass } %}
-        </div>
-    {% endif %}
-    {% if courseInfo.teachingTdClass is not null %}
-        <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdClass } %}
-        </div>
-    {% endif %}
-    {% if courseInfo.teachingTpClass is not null %}
-        <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass } %}
-        </div>
-    {% endif %}
-</div>
 
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
 {{ form_errors(form) }}
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-lg-5">
         <label class="required font-weight-bold">{{ 'app.presentation.form.teaching_mode.label' | trans }}</label>
         {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
     </div>
+    <div class="col-lg-7">
+
+        <label class="font-weight-bold">{{ 'app.presentation.form.teaching_mode.volumes' | trans }}</label>
+        <div class="row mb-3">
+            {% if courseInfo.teachingCmClass is not null %}
+                <div class="col-lg-4 col-md-6 col-12">
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmClass } %}
+                </div>
+            {% endif %}
+            {% if courseInfo.teachingTdClass is not null %}
+                <div class="col-lg-4 col-md-6 col-12">
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdClass } %}
+                </div>
+            {% endif %}
+            {% if courseInfo.teachingTpClass is not null %}
+                <div class="col-lg-4 col-md-6 col-12">
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass } %}
+                </div>
+            {% endif %}
+        </div>
+    </div>
 </div>
 
-<div class="row mt-3">
+<div class="mt-2">
     {% include 'course_info/presentation/form/_teaching_mode_class.html.twig' %}
     {% include 'course_info/presentation/form/_teaching_mode_distant.html.twig' %}
     {% include 'course_info/presentation/form/_teaching_mode_hybrid.html.twig' %}
