--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -15,6 +15,9 @@
     {% include 'course_info/view/student_presentation.html.twig' %}
     {% include 'course_info/view/student_objectives.html.twig' %}
     {% include 'course_info/view/student_activities.html.twig' %}
+    {% include 'course_info/view/student_evaluation.html.twig' %}
+    {% include 'course_info/view/student_equipments.html.twig' %}
+    {% include 'course_info/view/student_info.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
